--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "body-parser": "^2.2.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mysql": "^2.18.1",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
